--- a/render.yaml
+++ b/render.yaml
@@ -9,4 +9,4 @@ services:
   - type: cron
     name: upload-rooms
     schedule: "*/10 * * * *"
-    command: write_rooms_to_google_sheets.py
+    startCommand: python write_rooms_to_google_sheets.py
